feat: ProfileWithText 디자인시스템에서 제거

--- a/stories/components/dataDisplay/card/coreCard/CoreCard.stories.mdx
+++ b/stories/components/dataDisplay/card/coreCard/CoreCard.stories.mdx
@@ -1,15 +1,15 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import CoreCard from '@/components/card/CoreCard';
-import Content from '@/components/content/Content';
+import CoreCard from '@/components/card/CoreCard.vue';
+import Content from '@/components/content/Content.vue';
 import Avatar from '@/components/avatar/Avatar.vue';
-import Icon from '@/components/icon/Icon';
+import Icon from '@/components/icon/Icon.vue';
 import NewGrid from '@/components/grid/NewGrid.vue';
 import NewRow from '@/components/grid/NewRow.vue';
 import NewCol from '@/components/grid/NewCol.vue';
-import Typography from '@/components/typography/Typography';
-import ProfileWithText from '@/components/content/ProfileWithText';
-import ChipGroup from '@/components/chips/ChipGroup';
-import Chip from '@/components/chips/Chip';
+import Typography from '@/components/typography/Typography.vue';
+import ProfileWithText from './ProfileWithText.vue';
+import ChipGroup from '@/components/chips/ChipGroup.vue';
+import Chip from '@/components/chips/Chip.vue';
 
 <Meta
     title="Data Display/Card/CoreCard"
