--- a/stories/components/general/button/Button.stories.mdx
+++ b/stories/components/general/button/Button.stories.mdx
@@ -191,14 +191,14 @@ export const Default = (args, { argTypes }) => ({
                   <div style="display: flex">
                     <Button color="primary" type="fill" size="medium" loading>Fill Primary</Button>
                     <Button color="success" type="fill" size="medium" loading>Fill Success</Button>
-                    <Button color="error" type="fill" size="medium" loading>Fill Error</Button>
+                    <Button color="accent" type="fill" size="medium" loading>Fill Accent</Button>
                     <Button color="secondary" type="fill" size="medium" loading>Fill Secondary</Button>
                     <Button color="info" type="fill" size="medium" loading>Fill Info</Button>
                   </div>
                   <div style="display: flex">
                     <Button color="primary" type="outline" size="medium" loading>Fill Primary</Button>
                     <Button color="success" type="outline" size="medium" loading>Fill Success</Button>
-                    <Button color="error" type="outline" size="medium" loading>Fill Error</Button>
+                    <Button color="accent" type="outline" size="medium" loading>Fill Accent</Button>
                     <Button color="secondary" type="outline" size="medium" loading>Fill Secondary</Button>
                     <Button color="info" type="outline" size="medium" loading>Fill Info</Button>
                   </div>
@@ -228,11 +228,11 @@ export const Default = (args, { argTypes }) => ({
                         </template>
                         Fill Success
                     </Button>
-                    <Button color="error" type="fill" size="medium" disabled>
+                    <Button color="accent" type="fill" size="medium" disabled>
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusSmallLine" color="error" />
+                            <Icon name="IconPlusSmallLine" color="accent" />
                         </template>
-                        Fill Error
+                        Fill Accent
                     </Button>
                     <Button color="secondary" type="fill" size="medium" disabled>
                         <template v-slot:left-icon>
@@ -260,11 +260,11 @@ export const Default = (args, { argTypes }) => ({
                         </template>
                         Fill Success
                     </Button>
-                    <Button color="error" type="outline" size="medium" disabled>
+                    <Button color="accent" type="outline" size="medium" disabled>
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusSmallLine" color="error" />
+                            <Icon name="IconPlusSmallLine" color="accent" />
                         </template>
-                        Fill Error
+                        Fill Accent
                     </Button>
                     <Button color="secondary" type="outline" size="medium" disabled>
                         <template v-slot:left-icon>
@@ -292,11 +292,11 @@ export const Default = (args, { argTypes }) => ({
                         </template>
                         Fill Success
                     </Button>
-                    <Button color="error" type="text" size="medium" disabled>
+                    <Button color="accent" type="text" size="medium" disabled>
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusSmallLine" color="error" />
+                            <Icon name="IconPlusSmallLine" color="accent" />
                         </template>
-                        Fill Error
+                        Fill Accent
                     </Button>
                     <Button color="secondary" type="text" size="medium" disabled>
                         <template v-slot:left-icon>
