--- a/stories/components/dataEntry/RadioButton.stories.mdx
+++ b/stories/components/dataEntry/RadioButton.stories.mdx
@@ -118,7 +118,7 @@ export const Default = (args, { argTypes }) => ({
                         <RadioButton size="medium" class="mb-4" name="size" font-color="primary">primary</RadioButton>
                         <RadioButton size="medium" class="mb-4" name="size" radio-color="success" font-color="success">success</RadioButton>
                         <RadioButton size="medium" class="mb-4" name="size" radio-color="info" font-color="info">info</RadioButton>
-                        <RadioButton size="medium" class="mb-4" name="size" radio-color="error" font-color="error">error</RadioButton>
+                        <RadioButton size="medium" class="mb-4" name="size" radio-color="accent" font-color="accent">accent</RadioButton>
                     </div>
                 </div>
             `,
