--- a/stories/components/message/Callout.stories.mdx
+++ b/stories/components/message/Callout.stories.mdx
@@ -106,7 +106,7 @@ export const Default = (args, { argTypes }) => ({
                     <Callout type='information'>문구가 들어가는 자리입니다.</Callout>
                 </div>
                 <div>
-                    <Callout type='error'>문구가 들어가는 자리입니다.</Callout>
+                    <Callout type='accent'>문구가 들어가는 자리입니다.</Callout>
                 </div>
                 <div>
                     <Callout type='success'>문구가 들어가는 자리입니다.</Callout>
@@ -166,7 +166,7 @@ export const Default = (args, { argTypes }) => ({
                     <Callout type='information'>문구가 들어가는 자리입니다.</Callout>
                 </div>
                 <div>
-                    <Callout type='error'>문구가 들어가는 자리입니다.</Callout>
+                    <Callout type='accent'>문구가 들어가는 자리입니다.</Callout>
                 </div>
                 <div>
                     <Callout type='success'>문구가 들어가는 자리입니다.</Callout>
